--- a/components/sass/style.scss
+++ b/components/sass/style.scss
@@ -70,6 +70,24 @@ HEADER
 FOOTER
 ----------------------------------------------------------------------------- */
 
+/*
+RESPONSIVE
+----------------------------------------------------------------------------- */
+
+$tablet: 768px;
+$mobile: 480px;
+
+@media screen and (max-width:$tablet) and (min-width:$mobile + 1) {
+    body {
+        background-color: #1abc9c;
+    }
+}
+
+@media screen and (max-width:$mobile) {
+    body {
+        background-color: #2ecc71;
+    }
+}
 
 /* DELETE  THIS */
 .gridsystem h2{
