--- a/components/sass/style.scss
+++ b/components/sass/style.scss
@@ -77,17 +77,19 @@ RESPONSIVE
 $tablet: 768px;
 $mobile: 480px;
 
-@media screen and (max-width:$tablet) and (min-width:$mobile + 1) {
+@include media-query($tablet, $mobile) {
     body {
         background-color: #1abc9c;
     }
 }
 
-@media screen and (max-width:$mobile) {
+@include media-query($mobile, 0) {
     body {
         background-color: #2ecc71;
     }
 }
+
+
 
 /* DELETE  THIS */
 .gridsystem h2{
