--- a/components/scss/_form.scss
+++ b/components/scss/_form.scss
@@ -7,7 +7,8 @@ label {
 input[type="text"],
 input[type="email"],
 input[type="password"],
-textarea {
+textarea,
+select {
     display: block;
     width: 100%;
     height: $line-height;
@@ -24,6 +25,11 @@ textarea {
 
 textarea {
     height: auto;
+}
+
+select {
+    height: 32px;
+    line-height: 32px;
 }
 
 input[type="submit"],
