--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -1,6 +1,3 @@
-/*!
- *  WeezyBoilerplate v1.0.0 - 2014-08-28
- */
 @charset "UTF-8";
 /* Text Offset - for screen readers and SEO */
 /************************/
@@ -191,7 +188,7 @@ code, pre {
   background-color: #f8f8f8;
   border: 1px solid #cccccc;
   border-radius: 3px;
-  color: black;
+  color: #000000;
   font-family: Inconsolata,monospace;
   font-size: 12px;
   padding: 0 3px;
@@ -406,8 +403,8 @@ select {
   padding: 5px;
   font-size: 14px;
   line-height: 20px;
-  color: black;
-  background-color: white;
+  color: #000000;
+  background-color: #ffffff;
   border: 1px solid #cccccc;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
@@ -433,7 +430,7 @@ button {
   background: #f8f8f8;
   border: 0;
   padding: 0 10px;
-  color: black;
+  color: #000000;
   font-size: 14px;
   border: 1px solid #cccccc;
   -webkit-border-radius: 3px;
@@ -442,6 +439,8 @@ button {
   -o-border-radius: 3px;
   border-radius: 3px;
   margin: 0 0 20px 0;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 
 /*
@@ -460,8 +459,8 @@ body {
   text-transform: none;
   letter-spacing: normal;
   text-align: left;
-  background: white;
-  color: black;
+  background: #ffffff;
+  color: #000000;
   margin: 0;
   padding: 0;
   -webkit-font-smoothing: antialiased;
@@ -529,3 +528,5 @@ RESPONSIVE
   -o-border-radius: 5px;
   border-radius: 5px;
 }
+
+/*# sourceMappingURL=style.css.map */
