--- a/components/scss/global/_form.scss
+++ b/components/scss/global/_form.scss
@@ -1,9 +1,3 @@
-label {
-    display: inline-block;
-    margin-bottom: 5px;
-    font-weight: bold;
-}
-
 input[type="text"],
 input[type="email"],
 input[type="password"],
@@ -11,16 +5,23 @@ textarea,
 select {
     display: block;
     width: 100%;
-    height: $line-height;
+    height: 30px;
     padding: 5px;
-    font-size: $font-size;
+    font-size: $fontSizeDelta;
     line-height: $line-height;
     color: $black;
     background-color: $white;
     border: 1px solid $grey;
+    outline: none;
     @include rounded-corners(3px);
     margin: 0 0 $line-height 0;
-    @extend .hel-serif;
+    @extend %open-sans;
+}
+
+label {
+    display: inline-block;
+    margin-bottom: 5px;
+    font-weight: bold;
 }
 
 textarea {
@@ -34,17 +35,20 @@ select {
 
 input[type="submit"],
 button {
-    height: $line-height + 10px + 2px;
+    height: 32px;
     line-height: $line-height;
     background: $lightgrey;
     border: 0;
     padding: 0 10px;
     color: $black;
-    font-size: $font-size;
+    font-size: $fontSizeDelta;
     border: 1px solid $grey;
     @include rounded-corners(3px);
     margin: 0 0 $line-height 0;
-    @extend .hel-serif;
+    @extend %open-sans;
     -webkit-appearance: none;
     -moz-appearance: none;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    outline: none;
 }
