--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -1,21 +1,13 @@
 @charset "UTF-8";
-/* Text Offset - for screen readers and SEO */
-/************************/
-.text-offset {
-  text-indent: -999em;
+/* Grid
+----------------------------------------------------------------------------- */
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
+html {
+  box-sizing: border-box;
 }
 
-/* Clearfix */
-/************************/
-.clearfix, blockquote, .wrap {
-  zoom: 1;
-}
-.clearfix:before, blockquote:before, .wrap:before, .clearfix:after, blockquote:after, .wrap:after {
-  content: "";
-  display: table;
-}
-.clearfix:after, blockquote:after, .wrap:after {
-  clear: both;
+*, *::after, *::before {
+  box-sizing: inherit;
 }
 
 /* Reset */
@@ -60,29 +52,51 @@ table {
   border-spacing: 0;
 }
 
-/* =Typography
-------------------------------------------------------------------- */
-small {
-  font-size: 85%;
+/*
+COLOURS
+----------------------------------------------------------------------------- */
+/*
+FONT SIZES
+----------------------------------------------------------------------------- */
+/* Text Offset - for screen readers and SEO */
+/************************/
+.text-offset {
+  text-indent: -999em;
 }
 
-p {
-  margin: 0 0 20px;
+/* Clearfix */
+/************************/
+.clearfix, blockquote {
+  zoom: 1;
+}
+.clearfix:before, blockquote:before, .clearfix:after, blockquote:after {
+  content: "";
+  display: table;
+}
+.clearfix:after, blockquote:after {
+  clear: both;
 }
 
-img {
-  margin-bottom: 20px;
+/*
+FONT FAMILIES
+----------------------------------------------------------------------------- */
+body, input[type="text"],
+input[type="email"],
+input[type="password"],
+textarea,
+select, input[type="submit"],
+button {
+  font-family: 'Open Sans', sans-serif;
 }
 
+/*
+HEADINGS
+----------------------------------------------------------------------------- */
 h1, h2, h3, h4, h5, h6 {
-  line-height: 20px;
-  margin: 10px 0;
+  margin: 0 0 10px;
+  line-height: 1.4em;
   font-weight: 700;
   text-rendering: optimizelegibility;
-}
-
-h1, h2, h3 {
-  line-height: 40px;
 }
 
 h1 {
@@ -98,7 +112,7 @@ h3 {
 }
 
 h4 {
-  font-size: 18px;
+  font-size: 16px;
 }
 
 h4 {
@@ -109,10 +123,32 @@ h6 {
   font-size: 12px;
 }
 
+.section-title {
+  text-transform: uppercase;
+}
+
+.display-title {
+  font-weight: 300;
+  text-transform: uppercase;
+  font-size: 38px;
+}
+
+small {
+  font-size: 85%;
+}
+
+p {
+  margin: 0 0 1.25em;
+}
+
+img {
+  margin-bottom: 1.25em;
+}
+
 blockquote {
   border-left: 5px solid #cccccc;
   padding: 0 0 0 15px;
-  margin-bottom: 20px;
+  margin-bottom: 1.25em;
 }
 blockquote p {
   font-weight: 300;
@@ -205,191 +241,35 @@ pre code {
   padding: 0;
 }
 
-/* =Grid
-------------------------------------------------------------------- */
-.wrap {
-  margin: 0 auto;
-  padding: 0;
+/*
+BASE
+----------------------------------------------------------------------------- */
+html {
+  -webkit-text-size-adjust: none;
+}
+
+body {
   position: relative;
-  width: 960px;
+  font-size: 16px;
+  line-height: 1.25em;
+  font-style: normal;
+  font-weight: 400;
+  text-transform: none;
+  letter-spacing: normal;
+  text-align: left;
+  background: #ffffff;
+  color: #000000;
+  margin: 0;
+  padding: 0 15px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.grid1 {
-  width: 60px;
-  float: left;
-  margin: 10px;
-  position: relative;
+a {
+  color: inherit;
 }
-
-.grid2 {
-  width: 140px;
-  float: left;
-  margin: 10px;
-  position: relative;
-}
-
-.grid3 {
-  width: 220px;
-  float: left;
-  margin: 10px;
-  position: relative;
-}
-
-.grid4 {
-  width: 300px;
-  float: left;
-  margin: 10px;
-  position: relative;
-}
-
-.grid5 {
-  width: 380px;
-  float: left;
-  margin: 10px;
-  position: relative;
-}
-
-.grid6 {
-  width: 460px;
-  float: left;
-  margin: 10px;
-  position: relative;
-}
-
-.grid7 {
-  width: 540px;
-  float: left;
-  margin: 10px;
-  position: relative;
-}
-
-.grid8 {
-  width: 620px;
-  float: left;
-  margin: 10px;
-  position: relative;
-}
-
-.grid9 {
-  width: 700px;
-  float: left;
-  margin: 10px;
-  position: relative;
-}
-
-.grid10 {
-  width: 780px;
-  float: left;
-  margin: 10px;
-  position: relative;
-}
-
-.grid11 {
-  width: 860px;
-  float: left;
-  margin: 10px;
-  position: relative;
-}
-
-.grid12 {
-  width: 940px;
-  float: left;
-  margin: 10px;
-  position: relative;
-}
-
-.offset1 {
-  margin-left: 90px;
-}
-
-.offset2 {
-  margin-left: 170px;
-}
-
-.offset3 {
-  margin-left: 250px;
-}
-
-.offset4 {
-  margin-left: 330px;
-}
-
-.offset5 {
-  margin-left: 410px;
-}
-
-.offset6 {
-  margin-left: 490px;
-}
-
-.offset7 {
-  margin-left: 570px;
-}
-
-.offset8 {
-  margin-left: 650px;
-}
-
-.offset9 {
-  margin-left: 730px;
-}
-
-.offset10 {
-  margin-left: 810px;
-}
-
-.offset11 {
-  margin-left: 890px;
-}
-
-.pad1 {
-  margin-right: 90px;
-}
-
-.pad2 {
-  margin-right: 170px;
-}
-
-.pad3 {
-  margin-right: 250px;
-}
-
-.pad4 {
-  margin-right: 330px;
-}
-
-.pad5 {
-  margin-right: 410px;
-}
-
-.pad6 {
-  margin-right: 490px;
-}
-
-.pad7 {
-  margin-right: 570px;
-}
-
-.pad8 {
-  margin-right: 650px;
-}
-
-.pad9 {
-  margin-right: 730px;
-}
-
-.pad10 {
-  margin-right: 810px;
-}
-
-.pad11 {
-  margin-right: 890px;
-}
-
-label {
-  display: inline-block;
-  margin-bottom: 5px;
-  font-weight: bold;
+a:hover, a:active, a:focus {
+  outline: none;
 }
 
 input[type="text"],
@@ -399,19 +279,26 @@ textarea,
 select {
   display: block;
   width: 100%;
-  height: 20px;
+  height: 30px;
   padding: 5px;
-  font-size: 14px;
-  line-height: 20px;
+  font-size: 16px;
+  line-height: 1.25em;
   color: #000000;
   background-color: #ffffff;
   border: 1px solid #cccccc;
+  outline: none;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   -ms-border-radius: 3px;
   -o-border-radius: 3px;
   border-radius: 3px;
-  margin: 0 0 20px 0;
+  margin: 0 0 1.25em 0;
+}
+
+label {
+  display: inline-block;
+  margin-bottom: 5px;
+  font-weight: bold;
 }
 
 textarea {
@@ -426,102 +313,218 @@ select {
 input[type="submit"],
 button {
   height: 32px;
-  line-height: 20px;
+  line-height: 1.25em;
   background: #f8f8f8;
   border: 0;
   padding: 0 10px;
   color: #000000;
-  font-size: 14px;
+  font-size: 16px;
   border: 1px solid #cccccc;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   -ms-border-radius: 3px;
   -o-border-radius: 3px;
   border-radius: 3px;
-  margin: 0 0 20px 0;
+  margin: 0 0 1.25em 0;
   -webkit-appearance: none;
   -moz-appearance: none;
-}
-
-/*
-BASE
-------------------------------------------------------------------- */
-html {
-  -webkit-text-size-adjust: none;
-}
-
-body {
-  position: relative;
-  font-size: 14px;
-  line-height: 20px;
-  font-style: normal;
-  font-weight: 400;
-  text-transform: none;
-  letter-spacing: normal;
-  text-align: left;
-  background: #ffffff;
-  color: #000000;
-  margin: 0;
-  padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-a:hover, a:active, a:focus {
   outline: none;
 }
 
 /*
-TYPOGRAPHY
-------------------------------------------------------------------- */
-.hel-serif, input[type="text"],
-input[type="email"],
-input[type="password"],
-textarea,
-select, input[type="submit"],
-button, body {
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-}
-
-.serif {
-  font-family: 'Helvetica', 'Arial', 'Verdana', sans-serif;
-}
-
-.sans-serif {
-  font-family: 'Georgia', 'Times New Roman', serif;
-  font-style: italic;
-}
-
-/*
-HEADER
+HOME
 ----------------------------------------------------------------------------- */
-/*
-FOOTER
------------------------------------------------------------------------------ */
-/*
-RESPONSIVE
------------------------------------------------------------------------------ */
-@media screen and (max-width: 768px) and (min-width: 481px) {
-  body {
-    background-color: #1abc9c;
-  }
+.wrap {
+  max-width: 1170px;
+  margin-left: auto;
+  margin-right: auto;
 }
-@media screen and (max-width: 480px) and (min-width: 1) {
-  body {
-    background-color: #2ecc71;
-  }
-}
-/* DELETE  THIS */
-.gridsystem h2 {
-  margin-left: 10px;
+.wrap::after {
+  clear: both;
+  content: "";
+  display: table;
 }
 
-.gridsystem > div {
-  background: #f8f8f8;
-  color: #601286;
+.grid1 {
+  float: left;
+  display: block;
+  margin-right: 2.5641%;
+  width: 5.98291%;
+}
+.grid1:last-child {
+  margin-right: 0;
+}
+
+.grid2 {
+  float: left;
+  display: block;
+  margin-right: 2.5641%;
+  width: 14.52991%;
+}
+.grid2:last-child {
+  margin-right: 0;
+}
+
+.grid3 {
+  float: left;
+  display: block;
+  margin-right: 2.5641%;
+  width: 23.07692%;
+}
+.grid3:last-child {
+  margin-right: 0;
+}
+
+.grid4 {
+  float: left;
+  display: block;
+  margin-right: 2.5641%;
+  width: 31.62393%;
+}
+.grid4:last-child {
+  margin-right: 0;
+}
+
+.grid5 {
+  float: left;
+  display: block;
+  margin-right: 2.5641%;
+  width: 40.17094%;
+}
+.grid5:last-child {
+  margin-right: 0;
+}
+
+.grid6 {
+  float: left;
+  display: block;
+  margin-right: 2.5641%;
+  width: 48.71795%;
+}
+.grid6:last-child {
+  margin-right: 0;
+}
+
+.grid7 {
+  float: left;
+  display: block;
+  margin-right: 2.5641%;
+  width: 57.26496%;
+}
+.grid7:last-child {
+  margin-right: 0;
+}
+
+.grid8 {
+  float: left;
+  display: block;
+  margin-right: 2.5641%;
+  width: 65.81197%;
+}
+.grid8:last-child {
+  margin-right: 0;
+}
+
+.grid9 {
+  float: left;
+  display: block;
+  margin-right: 2.5641%;
+  width: 74.35897%;
+}
+.grid9:last-child {
+  margin-right: 0;
+}
+
+.grid10 {
+  float: left;
+  display: block;
+  margin-right: 2.5641%;
+  width: 82.90598%;
+}
+.grid10:last-child {
+  margin-right: 0;
+}
+
+.grid11 {
+  float: left;
+  display: block;
+  margin-right: 2.5641%;
+  width: 91.45299%;
+}
+.grid11:last-child {
+  margin-right: 0;
+}
+
+.grid12 {
+  float: left;
+  display: block;
+  margin-right: 2.5641%;
+  width: 100%;
+}
+.grid12:last-child {
+  margin-right: 0;
+}
+
+.offset1 {
+  margin-left: 8.54701%;
+}
+
+.offset2 {
+  margin-left: 17.09402%;
+}
+
+.offset3 {
+  margin-left: 25.64103%;
+}
+
+.offset4 {
+  margin-left: 34.18803%;
+}
+
+.offset5 {
+  margin-left: 42.73504%;
+}
+
+.offset6 {
+  margin-left: 51.28205%;
+}
+
+.offset7 {
+  margin-left: 59.82906%;
+}
+
+.offset8 {
+  margin-left: 68.37607%;
+}
+
+.offset9 {
+  margin-left: 76.92308%;
+}
+
+.offset10 {
+  margin-left: 85.47009%;
+}
+
+.offset11 {
+  margin-left: 94.01709%;
+}
+
+.gridsystem .grids {
+  margin-bottom: 20px;
+  display: block;
+}
+.gridsystem .grids::after {
+  clear: both;
+  content: "";
+  display: table;
+}
+.gridsystem .grids div {
+  background: #000000;
+  color: #ffffff;
   padding: 20px 0;
   text-align: center;
-  text-shadow: 0, 1px, 0, rgba(255, 255, 255, 0.2);
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
